<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedbackTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black_font" />

    <EditText
        android:id="@+id/feedbackForm"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutWithButtons"
        android:layout_below="@+id/textView1"
        android:gravity="top"
        android:hint="@string/please_type_here"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/layoutWithButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:text="@string/send" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

</RelativeLayout>