<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/login_activity_linearlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- Logo -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/login_logo_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <include layout="@layout/progress_bar_layout" />

            <LinearLayout
                android:id="@+id/layoutWithURL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_logo_ImageView"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="visible" >

                <Spinner
                    android:id="@+id/spinner_http_Or_https"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:entries="@array/http_or_https" />

                <EditText
                    android:id="@+id/login_URL_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:hint="@string/login_URL_hint"
                    android:singleLine="true"
                     />

            </LinearLayout>

            <!-- User's name -->

            <EditText
                android:id="@+id/login_username_EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutWithURL"
                android:layout_marginTop="5dp"
                android:hint="@string/login_username_hint"
                android:singleLine="true"
                android:visibility="visible" />

            <!-- User's password -->

            <EditText
                android:id="@+id/login_password_EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_username_EditText"
                android:layout_marginTop="5dp"
                android:hint="@string/login_password_hint"
                android:password="true"
                android:singleLine="true"
                android:visibility="visible" />

            <!-- Login button -->

            <CheckBox
                android:id="@+id/login_checkbox"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/login_password_EditText"
                android:checked="true"
                android:hint="@string/if_you_check_this_field_the_user_and_password_will_be_saved_and_log_in_will_be_automaticly"
                android:text="@string/remember_me"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black_font"
                android:visibility="visible" />

            <Button
                android:id="@+id/login_login_Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/login_checkbox"
                android:layout_marginTop="17dp"
                android:text="@string/login_login_Button"
                android:visibility="visible" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>